<resources>
    <string name="app_name">Task2</string>
    <string name="tastyRecipes">TastyRecipes</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="address">Address</string>
    <string name="existingUser">Existing User?</string>
    <string name="login">Login</string>
</resources>