<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/pink"
        android:theme="?android:attr/actionBarTheme"
        app:title="@string/tastyRecipes"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/pink"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:background="@drawable/border_edit"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/name"
            android:layout_marginHorizontal="20dp"
            android:paddingLeft="25dp"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:textColorHint="@color/pink" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edit"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:layout_marginHorizontal="20dp"
            android:paddingLeft="25dp"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:textColorHint="@color/pink" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edit"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:layout_marginHorizontal="20dp"
            android:paddingLeft="25dp"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:textColorHint="@color/pink" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edit"
            android:layout_marginTop="20dp"
            android:hint="@string/confirmPassword"
            android:layout_marginHorizontal="20dp"
            android:paddingLeft="25dp"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:textColorHint="@color/pink" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edit"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:layout_marginHorizontal="20dp"
            android:paddingLeft="25dp"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/ic_action_location"
            android:textColorHint="@color/pink" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:backgroundTint="@color/pink"
            android:background="@drawable/border_edit"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existingUser"
            android:textColor="@color/pink"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textSize="15dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/pink"
            android:background="@drawable/border_edit"/>

    </LinearLayout>
</LinearLayout>